--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "author": "Steve",
     "license": "ISC",
     "devDependencies": {
-        "bootstrap": "4.1.3",
-        "chai": "^4.1.2",
+        "bootstrap": "^4.1.3",
+        "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
         "chai-bignumber": "^2.0.2",
         "lite-server": "^2.3.0",
-        "nodemon": "^1.17.3",
-        "truffle": "5.0.2",
-        "truffle-contract": "3.0.6"
+        "nodemon": "^1.19.4",
+        "truffle": "^5.0.2",
+        "truffle-contract": "^3.0.6"
     },
     "dependencies": {
         "git": "^0.1.5"
